--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="The Place Restaurant is #1 in San Antonio">
   <title>The Place Restaurant</title>
-  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="styles/main.css"/>
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
 </head>
 
 <body>
@@ -18,7 +22,7 @@
       <h1>The Place</h1>
       <img src="assets/images/star-divider.svg" alt="star divider" />
       <h3>Ready to be opened</h3>
-      <button class="btn-menu">
+      <button class="btn-menu animate__animated animate__bounceInDown animate__delay-2s">
         Our Menu
       </button>
     </div>
