--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     </div>
   </section>
   
-  <div class="burger-icon">
+  <div class="burger-icon animate__animated animate__rotate">
     <img src="assets/images/3075977.png" alt="hamburger" width="50" height="50">
   </div>
   <section class="image-container">
-    <img class="card" src="https://via.placeholder.com/300.png/" alt="image placeholder">
+    <img class="card animate__animated animate__bounceInDown animate__delay-2s" src="https://via.placeholder.com/300.png/" alt="image placeholder">
   </section>
 
   <script src="js/main.js"></script>
